# embedded_rust

Rust_prac/Dis-blink/src/: main.rs
Rust_prac/Discovery/: Cargo.toml
Rust_prac/delay/: openocd.gdb
Rust_prac/delay/src/: main.rs
Rust_prac/files_rust/: Cargo.toml
Rust_prac/files_rust/import_file/src/: main.rs  osama.txt
Rust_prac/first_crate/: Cargo.toml
Rust_prac/first_crate/st_count/: Cargo.toml
Rust_prac/hello/: Cargo.toml  openocd.gdb
Rust_prac/hello/.cargo/: config
Rust_prac/hello/src/: main.rs
Rust_prac/mysql_pro/: Cargo.toml
Rust_prac/mysql_pro/src/: main.rs
Rust_prac/puch_button/: Cargo.toml
Rust_prac/puch_button/src/: main.rs
Rust_prac/stm32/: Cargo.toml  build.rs  memory.x
Rust_prac/stm32/src/: main.rs
Rust_prac/stm32f3_ADC/ADC/src/: main.rs
Rust_prac/stm32f3_ADC/ADC_Callibrate/: Cargo.toml
Rust_prac/stm32f3_ADC/ADC_Callibrate/src/: main.rs
Rust_prac/trait_prac/: Cargo.toml
Rust_prac/trait_prac/src/: main.rs
Rust_prac/vec_prac/: Cargo.toml
Rust_prac/vec_prac/src/: main.rs
