[package]
name = "ADC_Callibrate"
version = "0.1.0"
authors = ["Osama530 <osamaqamar93@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#panic-halt = "0.2.0"
panic-semihosting = "0.5.3"
cortex-m-rt = "0.6.12"
cortex-m-semihosting = "0.3.5"

[dependencies.stm32f3]
version = "0.10.0"
features = ["stm32f303"]

[profile.release]
lto = true
debug = true